# nidus

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.development.md  README.md  ROADMAP.md  THIRD-PARTY-NOTICES.txt  build-container.sh  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/commands/: distill.md  format.md  pre-clear.md  sync.md
.claude/hooks/: hook-rust.sh
.devcontainer/: Dockerfile  change-network.sh  compose.yml  devcontainer.json  squid.conf
.github/: manual_release.md  release.yml  release_procedure.md
docker/: Dockerfile
docs/: future_release_plan.md  next_release_feature.md  python-architecture.md
docs/issues/: db-export-import.md  db-multiple-collections.md  db-reindex.md  delete-query-path-with-apostrophe.md  processor-csv-tsv.md  processor-docx.md  processor-tex.md  resources-get-single-doc-message-typo.md  search-filter-filetype-date.md  search-query-expansion.md  update-doc-meta-chunk-consistency.md  update-eprintln-to-tracing.md  update-hash-failure-empty-string-fallback.md  update-load-existing-meta-unwrap-panic.md  watch-dir-moved-db-inconsistency.md
rust/: Cargo.toml  about.hbs  about.toml
rust/.cargo/: config.toml
rust/crates/nidus-cli/: Cargo.toml
rust/crates/nidus-cli/src/: main.rs
rust/crates/nidus-core/: Cargo.toml
rust/crates/nidus-core/src/: config.rs  embedding.rs  init.rs  lib.rs  watch.rs
rust/crates/nidus-core/src/db/: connection.rs  drop.rs  list.rs  mod.rs  reindex.rs  search.rs  status.rs  update.rs
rust/crates/nidus-core/src/processor/: chunker.rs  csv.rs  docx.rs  html.rs  markdown.rs  mod.rs  pdf.rs  text.rs
samples/docs/: sample_doc.md  社内ナレッジベース.md  社内ナレッジベース.odt
scripts/: data_generator_compare.py  generate_third_party_notices.py  list_tools.py  read_pdf.py  search_db.py
src/: main.py
