[project]
name = "nidus"
version = "0.1.0"
description = "Nidus: open-source document store database"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "mcp[cli]>=1.26.0",
    "pydantic>=2.12.5",
    "lancedb>=0.29.2",
    "mcp-server",
    "cli",
    "pyarrow>=23.0.1",
    "platformdirs>=4.9.2",
    "model2vec>=0.7.0",
    "huggingface-hub>=1.4.1",
    "common",
]

[tool.uv]
package = true

[tool.uv.workspace]
members = ["packages/*"]

[dependency-groups]
dev = [
    "pip-licenses>=5.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.2",
]

[tool.setuptools.packages.find]
include = ["packages*"]

[project.scripts]
nidus = "cli.main:main"
nidus-mcp = "mcp_server.main:main"

[tool.uv.sources]
mcp-server = { workspace = true }
common = { workspace = true }
cli = { workspace = true }
