[workspace]
members = [
    "crates/nidus-core",
    "crates/nidus-cli",
]
resolver = "2"

[workspace.dependencies]
tokio        = { version = "1", features = ["full"] }
lancedb      = "0.26"
lance-index  = "=2.0.0"
arrow-array  = "57"
arrow-schema = "57"
safetensors  = "0.4"
tokenizers   = { version = "0.21", default-features = false, features = ["onig"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
anyhow       = "1"
clap         = { version = "4", features = ["derive"] }
dotenvy      = "0.15"
dirs         = "5"
once_cell    = "1"
regex        = "1"
pulldown-cmark = "0.12"
scraper      = "0.21"
csv          = "1"
zip          = "2"
quick-xml    = "0.37"
pdf-extract  = "0.7"
ego-tree     = "0.9"
sha2         = "0.10"
futures      = "0.3"
reqwest      = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
notify       = "6"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip = true

[profile.dev]
debug = "line-tables-only"  # 行番号のみ(1=limitedよりさらに軽量)。リンク時間を短縮

[profile.test]
debug = 2  # テスト時はフルデバッグ情報（バックトレースでローカル変数を表示）

# 依存クレートは opt-level=2 でビルドしキャッシュする。
# tokenizers / lancedb / arrow 等の重いクレートの再コンパイルを防ぐ。
[profile.dev.package."*"]
opt-level = 2
debug = false
