[workspace]
members = [
    "crates/nidus-core",
    "crates/nidus-cli",
]
resolver = "2"

[workspace.dependencies]
tokio        = { version = "1", features = ["full"] }
lancedb      = "0.26"
lance-index  = "=2.0.0"
arrow-array  = "57"
arrow-schema = "57"
safetensors  = "0.4"
tokenizers   = { version = "0.21", default-features = false, features = ["onig"] }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
anyhow       = "1"
clap         = { version = "4", features = ["derive"] }
dotenvy      = "0.15"
dirs         = "5"
once_cell    = "1"
regex        = "1"
pulldown-cmark = "0.12"
scraper      = "0.21"
csv          = "1"
zip          = "2"
quick-xml    = "0.37"
pdf-extract  = "0.7"
ego-tree     = "0.9"
sha2         = "0.10"
futures      = "0.3"
reqwest      = { version = "0.12", default-features = false, features = ["rustls-tls", "stream"] }
notify       = "6"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip = true

[profile.dev]
debug = "line-tables-only"  # 行番号のみ(1=limitedよりさらに軽量)。リンク時間を短縮

[profile.test]
debug = 2  # テスト時はフルデバッグ情報（バックトレースでローカル変数を表示）

# 依存クレートは opt-level=2 でビルドしキャッシュする。
# tokenizers / lancedb / arrow 等の重いクレートの再コンパイルを防ぐ。
[profile.dev.package."*"]
opt-level = 2
debug = false

# lance fork: DataFusion の不要 features（unicode/crypto/encoding/datetime/regex/string）を除去
# https://github.com/Kuroki-g/lance/tree/nidus-slim-v2.0.0
# lance-* は monorepo なので全クレートを同じ fork に統一しないと型の二重定義が発生する
[patch.crates-io]
lance                 = { git = "https://github.com/Kuroki-g/lance", branch = "nidus-slim-v2.0.0" }
lance-arrow           = { git = "https://github.com/Kuroki-g/lance", branch = "nidus-slim-v2.0.0" }
lance-core            = { git = "https://github.com/Kuroki-g/lance", branch = "nidus-slim-v2.0.0" }
lance-datafusion      = { git = "https://github.com/Kuroki-g/lance", branch = "nidus-slim-v2.0.0" }
lance-datagen         = { git = "https://github.com/Kuroki-g/lance", branch = "nidus-slim-v2.0.0" }
lance-encoding        = { git = "https://github.com/Kuroki-g/lance", branch = "nidus-slim-v2.0.0" }
lance-file            = { git = "https://github.com/Kuroki-g/lance", branch = "nidus-slim-v2.0.0" }
lance-geo             = { git = "https://github.com/Kuroki-g/lance", branch = "nidus-slim-v2.0.0" }
lance-index           = { git = "https://github.com/Kuroki-g/lance", branch = "nidus-slim-v2.0.0" }
lance-io              = { git = "https://github.com/Kuroki-g/lance", branch = "nidus-slim-v2.0.0" }
lance-linalg          = { git = "https://github.com/Kuroki-g/lance", branch = "nidus-slim-v2.0.0" }
lance-namespace       = { git = "https://github.com/Kuroki-g/lance", branch = "nidus-slim-v2.0.0" }
lance-namespace-impls = { git = "https://github.com/Kuroki-g/lance", branch = "nidus-slim-v2.0.0" }
lance-table           = { git = "https://github.com/Kuroki-g/lance", branch = "nidus-slim-v2.0.0" }
lance-testing         = { git = "https://github.com/Kuroki-g/lance", branch = "nidus-slim-v2.0.0" }
