[package]
name    = "nidus-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio        = { workspace = true }
lancedb      = { workspace = true }
arrow-array  = { workspace = true }
arrow-schema = { workspace = true }
safetensors  = { workspace = true }
tokenizers   = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
dotenvy      = { workspace = true }
dirs         = { workspace = true }

[dev-dependencies]
tempfile = "3"
