[package]
name    = "nidus-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio          = { workspace = true }
lancedb        = { workspace = true }
arrow-array    = { workspace = true }
arrow-schema   = { workspace = true }
safetensors    = { workspace = true }
tokenizers     = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
anyhow         = { workspace = true }
dotenvy        = { workspace = true }
dirs           = { workspace = true }
once_cell      = { workspace = true }
regex          = { workspace = true }
pulldown-cmark = { workspace = true }
scraper        = { workspace = true }
csv            = { workspace = true }
zip            = { workspace = true }
quick-xml      = { workspace = true }
pdf-extract    = { workspace = true }
ego-tree       = { workspace = true }

[dev-dependencies]
tempfile = "3"
